...
            android:text="Fetching role..." />

    </LinearLayout>

    <!-- Remove Profile Button -->
    <Button
        android:id="@+id/remove_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remove Profile"
        android:layout_gravity="center"
        android:backgroundTint="#FF0000"
        android:textColor="@android:color/white"
...
